- Minor improvements and fixes for edible choice items - Add item wheel reward - Add tossup animation for advancement reward loot - Bump version to 1.4.5